# Accumulator-Based-Programming-Language

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
accbpl/: CMakeLists.txt
accbpl/examples/: hello-world-char.accbpl
accbpl/src/: accbpl.c  accbpl.h  config.h  main.c
cmake/: print.cmake
src/: accbpl.c  accbpl.h
